--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 sudo: false
  
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: "python setup.py install"
+
 # command to run tests
 script: pytest
